# mpcs-c-bootcamp

./: .gitignore  README.md
basics/: arrays.c  divisor.c  functions.c  hello.c  printf.c
linked-list/: distance.c  list.c  struct.c
make/: CMakeLists.txt  Makefile  list.c  list.h  main.c
pointers/: fetch-and-add.c  fib-bad.c  fib.c  pointers-arrays.c
strings/: length.c  mystery.c  strjoin.c  strlen.c
